# MINI-PROJECT-

./: .gitignore  README.md
APP/: .env.example  App.tsx  (+4 more)
ML BACKEND DASHBOARD/: .gitignore  .replit  app.py  generate_dataset.py  inspect_scaler.py  pyproject.toml  test_models.py  train_forecast.py  train_model.py
ML BACKEND DASHBOARD/.local/secondary_skills/ad-creative/: .fingerprint
ML BACKEND DASHBOARD/.local/secondary_skills/ai-recruiter/: .fingerprint
ML BACKEND DASHBOARD/attached_assets/: Pasted-Analyze-my-entire-project-repository-and-generate-extre_1774879453081.txt  Pasted-I-am-building-a-real-time-weather-prediction-dashboard-_1774908589968.txt  Pasted-I-am-seeing-several-problems-in-my-dashboard-based-on-t_1774909957148.txt  Pasted-I-have-a-Python-based-AI-Weather-Prediction-project-Pro_1771071267566.txt  Pasted-I-have-a-working-Flask-based-AI-Weather-Monitoring-Syst_1771086149214.txt  Pasted-I-want-you-to-analyze-my-entire-project-and-create-a-co_1774849591805.txt  Pasted-Now-we-re-building-a-real-forecasting-engine-Not-just-f_1771451735065.txt  Pasted-Windows-PowerShell-Copyright-C-Microsoft-Corporation-Al_1774823987307.txt
ML BACKEND DASHBOARD/data/datasets/: forecast_dataset.csv
ML BACKEND DASHBOARD/data/logs/: weather_log_2026_03.csv
ML BACKEND DASHBOARD/models/: model_accuracies.json
ML BACKEND DASHBOARD/scripts/: build_forecast_dataset.py  train_forecast.py  train_model.py
ML BACKEND DASHBOARD/static/css/: style.css
ML BACKEND DASHBOARD/templates/: base.html  index.html  model_analysis.html  precipitation.html  temp_humidity.html
(+249 files in other folders)
